--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,43 @@ body {
     font-weight: normal;
     font-family: "Roboto";
 }
+.main-header {
+    background-color: #eeeeee;
+}
+.container {
+    width: 880px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+.logo {
+    display: block;
+    float: left;
+    width: 160px;
+    margin-right: 160px;
+}
+.main-navigation {
+    display: block;
+    float: left;
+    width: 400px;
+}
+.main-navigation li {
+    display: inline-block;
+    text-transform: uppercase;  
+}
+.basket-block {
+    display: block;
+    float: right;
+    width: 100px;
+}
+.clear {
+    clear: both;
+}
+/* РАЗМЕТКА СЛАЙДЕРА
+   РАЗМЕТКА СЛАЙДЕРА
+   РАЗМЕТКА СЛАЙДЕРА
+   РАЗМЕТКА СЛАЙДЕРА
 .slider-text h3 {
     font-size: 36px;
     line-height: 36px;
@@ -12,10 +49,95 @@ body {
     font-weight: normal;
     font-family: "Roboto";
 }
-.direction h2 {
+*/
+.direction {    
+    float: left;
+    box-sizing: border-box;
+    width: 240px;
+    margin-right: 80px;
+    margin-bottom: 80px;
+}
+.direction:last-child {    
+    margin-right: 0;
+}
+direction img {    
+    margin-bottom: 30px;
+}
+.direction-title {    
+    margin-bottom: 25px;
+    text-transform: uppercase;
     font-size: 18px;
     line-height: 30px;
     color: black;
     font-weight: normal;
     font-family: "Roboto";
+}
+.direction p {
+    margin-bottom: 30px;
+    font-size: 15px;
+    line-height: 22px;
+    color: black;
+    font-weight: normal;
+    font-family: "Roboto";
+}
+.btn {
+    display: inline-block;
+    background-color: #fb565a;
+    text-transform: uppercase;
+    text-decoration: none;
+}
+.direction-btn {
+    padding-top: 13px;
+    padding-bottom: 13px;
+    padding-left: 40px;
+    padding-right: 40px;
+    font-size: 12px;
+    line-height: 18px;
+    color: #ffffff;
+    font-weight: normal;
+    font-family: "Roboto";        
+}
+.about-left {
+    float: left;
+    width: 620px;
+}
+.about-right {
+    float: right;
+    width: 240px;
+}
+.about-left h1 {
+    font-size: 36px;
+    line-height: 36px;
+    color: black;
+    font-weight: normal;
+    font-family: "Roboto";
+}
+.about-right p {
+    font-size: 16px;
+    line-height: 8.56px;
+    color: black;
+    font-weight: normal;
+    font-family: "Roboto";
+}
+.about-left h3 {
+    text-transform: uppercase;
+}
+.about-right h3 {
+    text-transform: uppercase;
+}
+.about-block:last-child {
+    margin-bottom: 70px;
+}
+.clients {
+    border-top: 2px solid #eeeeee;
+    border-bottom: 2px solid #eeeeee;
+    vertical-align: top;
+}
+.clients-img {
+    
+}
+.clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
 }
