--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,11 @@
 body {
+    margin: 0;
+    padding: 0;
     font-size: 16px;
     line-height: 22px;
     color: black;
     font-weight: normal;
-    font-family: "Roboto";
-}
-.main-header {
-    background-color: #eeeeee;
+    font-family: "Roboto";    
 }
 .container {
     width: 880px;
@@ -14,6 +13,28 @@ body {
     margin-right: auto;
     padding-left: 10px;
     padding-right: 10px;
+}
+.btn {
+    display: inline-block;
+    padding-top: 13px;
+    padding-bottom: 13px;
+    background-color: #fb565a;
+    border: 0;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-size: 12px;
+    line-height: 18px;
+    font-weight: normal;
+    font-family: "Roboto";
+    color: #ffffff; 
+}
+.clearfix:after, clearfix:before {
+    content: "";
+    display: table;
+    clear: both;
+}
+.main-header {
+    background-color: #eeeeee;
 }
 .logo {
     display: block;
@@ -35,27 +56,39 @@ body {
     float: right;
     width: 100px;
 }
-.clear {
-    clear: both;
+.slider {
+    background-color: #eeeeee;
+    margin-bottom: 80px;
 }
-/* РАЗМЕТКА СЛАЙДЕРА
-   РАЗМЕТКА СЛАЙДЕРА
-   РАЗМЕТКА СЛАЙДЕРА
-   РАЗМЕТКА СЛАЙДЕРА
-.slider-text h3 {
+.slider-text {
+    float: left;
+    width: 380px;    
+}
+.slider-text h3 {     
+    margin-bottom: 15px;
     font-size: 36px;
     line-height: 36px;
     color: black;
     font-weight: normal;
     font-family: "Roboto";
 }
-*/
+.slider-btn {
+    padding-left: 70px;
+    padding-right: 70px;
+}
+.slider-img {
+    float: right;
+    width: 340px;    
+}
+.directions {
+    height: 380px;
+    margin-bottom: 80px;
+    border-bottom: 2px solid #eeeeee;
+}
 .direction {    
-    float: left;
-    box-sizing: border-box;
+    float: left;    
     width: 240px;
     margin-right: 80px;
-    margin-bottom: 80px;
 }
 .direction:last-child {    
     margin-right: 0;
@@ -79,23 +112,13 @@ direction img {
     color: black;
     font-weight: normal;
     font-family: "Roboto";
-}
-.btn {
-    display: inline-block;
-    background-color: #fb565a;
-    text-transform: uppercase;
-    text-decoration: none;
-}
-.direction-btn {
-    padding-top: 13px;
-    padding-bottom: 13px;
+}   
+.direction-btn {    
     padding-left: 40px;
     padding-right: 40px;
-    font-size: 12px;
-    line-height: 18px;
-    color: #ffffff;
-    font-weight: normal;
-    font-family: "Roboto";        
+}
+.about-block {
+    height: 237px;
 }
 .about-left {
     float: left;
@@ -126,18 +149,148 @@ direction img {
     text-transform: uppercase;
 }
 .about-block:last-child {
-    margin-bottom: 70px;
-}
-.clients {
-    border-top: 2px solid #eeeeee;
+    margin-bottom: ;
     border-bottom: 2px solid #eeeeee;
-    vertical-align: top;
 }
-.clients-img {
-    
+.clients {    
+    box-sizing: border-box;
+    height: 167px;
+    margin-bottom: 86px;
+    border-bottom: 2px solid #eeeeee;
+    padding-top: 45px;
+    vertical-align: middle;    
 }
-.clearfix:after {
-    content: "";
-    display: table;
-    clear: both;
+.clients-img {    
+    display: inline-block;
+}
+.social-btn {
+    padding-left: 55px;
+    padding-right: 55px;
+}
+.footer-map {
+    box-sizing: border-box;
+    width: 1199px;
+    height: 416px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 75px;
+}
+.map {
+    position: absolute;
+    background-image: url(img/map.jpg) no-repeat;    
+}
+.social-icon {
+    float: left;
+    width: 240px;
+}
+.social-tagline {
+    float: right;
+}
+.social-title {
+    width: 560px;
+    font-size: 36px;
+    line-height: 36px;
+    color: black;
+    font-weight: normal;
+    font-family: "Roboto";
+}
+
+/* CATALOG          CATALOG         CATALOG */
+
+.main-heading {
+    height: 245px;
+    background-color: #eeeeee;
+    margin-bottom: 80px;
+}
+.h1-catalog {    
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 40px;
+    line-height: normal;
+    color: black;
+    text-transform: uppercase;
+    font-weight: normal;
+    font-family: "Roboto";
+    text-align: center;
+}
+.products-filters {
+    float: left;
+    width: 240px;
+}
+.filter-block {
+    margin-bottom: 50px;
+}
+.filter-block:nth-child(3) {
+    margin-bottom: 57px;
+}
+.filter-h2 {
+    margin-bottom: 20px;
+    font-size: 18px;
+    line-height: 30px;
+    color: black;
+    text-transform: uppercase;
+    font-weight: normal;
+    font-family: "Roboto";
+}
+.filter-btn {
+    width: 155px;
+    background-color: #f1f1f1;
+    color: black;
+}
+.catalog {
+    float: right;
+    width: 560px;
+}
+.sorting-title {
+    font-size: 12px;
+    line-height: 18px;
+    color: black;
+    text-transform: uppercase;
+    font-weight: normal;
+    font-family: "Roboto";
+}
+.sortinf-type {
+    float: left;
+}
+.sorting-type a {
+    border-bottom: 1px dotted #00ca74;
+    font-size: 12px;
+    line-height: 18px;
+    color: #b2b2b2;
+    text-transform: uppercase;
+    font-weight: normal;
+    font-family: "Roboto";
+}
+.sorting-dir {
+    float: right;
+}
+.products {
+    margin-bottom: 80px;
+    border-top: 30px solid #f1f1f1;
+}
+.products:nth-child(odd){    
+    float: left;
+}
+.products:nth-child(even) {
+    float:right;
+}
+.products-navigation li {
+    display: inline-block;
+    box-sizing: border-box;
+    width: 38px;
+    height: 38px;
+    border: 1px solid #f1f1f1;
+    background-color: #f1f1f1;
+    font-size: 12px;
+    line-height: 18px;
+    color: black;
+    text-transform: uppercase;
+    font-weight: normal;
+    font-family: "Roboto";
+    text-align: center;
+    vertical-align: middle;
+}
+.products-navigation-active {
+    background-color: #ffffff;
+     border: 1px solid #f2f2f2;
 }
