--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,46 @@ body {
     font-weight: normal;
     font-family: "Roboto";    
 }
+@font-face {
+  font-weight: normal;
+  font-style: normal;
+
+  font-family: "symbols-nerds";
+  src: url("../fonts/symbols-nerds.woff") format("woff"),
+       url("../fonts/symbols-nerds.woff2") format("woff2");
+}
+
+[class^="icon-"]::before,
+[class*=" icon-"]::before {
+  display: inline-block;
+  width: 1em;
+  margin-right: 0.2em;
+  margin-left: 0.2em;
+
+  font-weight: normal;
+  line-height: 1em;
+  font-family: "symbols-nerds";
+  text-align: center;
+  text-transform: none;
+  text-decoration: inherit;
+  font-style: normal;
+  font-variant: normal;
+
+  speak: none;
+}
+
+.icon-basket::before { content: "\62"; } /* "b" */
+.icon-facebook::before { content: "\66"; } /* "f" */
+.icon-twitter::before { content: "\74"; } /* "t" */
+.icon-vk::before { content: "\76"; } /* "v" */
+.icon-up-dir::before { content: "\25b2"; } /* "▲" */
+.icon-down-dir::before { content: "\25bc"; } /* "▼" */
+.icon-circle::before { content: "\25cb"; } /* "○" */
+.icon-circle-dot::before { content: "\25cf"; } /* "●" */
+.icon-check-off::before { content: "\2610"; } /* "☐" */
+.icon-check-on::before { content: "\2611"; } /* "☑" */
+.icon-instagramm::before { content: "📷"; } /* "\1f4f7" */
+
 .container {
     width: 880px;
     margin-left: auto;
@@ -28,43 +68,122 @@ body {
     font-family: "Roboto";
     color: #ffffff; 
 }
-.clearfix:after, clearfix:before {
+.clearfix:after, 
+.clearfix:before {
     content: "";
     display: table;
     clear: both;
 }
 .main-header {
+    padding-top: 25px;
     background-color: #eeeeee;
 }
 .logo {
     display: block;
     float: left;
-    width: 160px;
-    margin-right: 160px;
 }
 .main-navigation {
     display: block;
     float: left;
-    border: 1px solid black;
+    padding-top: 20px;
+}
+.main-navigation ul {
+    margin: 0 0 0 180px;
+    padding: 0;
+    list-style: none;
+    font-size: 0px;
 }
 .main-navigation li {
-    display: inline-block;
-    text-transform: uppercase;  
+    display: inline-block;    
+    vertical-align: top;
+}
+.main-navigation a {
+    display: block;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    margin-right: 45px;
+    font-size: 14px;
+    line-height: 30px;
+    color: #000000;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+.main-navigation .no-margin {
+    margin-right: 0;
+}
+.main-navigation a:hover {
+    color: #f4a7a9;
+}
+.main-navigation a:active {
+    color: #c1c1c1;
+}
+.main-navigation .active {
+    padding-bottom: 5px;
+    border-bottom: 2px solid #fb565a;
 }
 .basket-block {
-    display: block;
+    padding-top: 20px;
     float: right;
-    width: 100px;
+}
+.basket-block a {
+    display: block;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    color: #000000;
+    font-size: 14px;
+    line-height: 30px;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+.basket-block a:hover {
+    color: #fb565a;
+}
+.basket-block a:active {
+    color: #cbcbcb;
+}
+.basket-block .active {
+    padding-bottom: 5px;
+    border-bottom: 2px solid #fb565a;
 }
 .slider {
+    position: relative;
     background-color: #eeeeee;
     margin-bottom: 80px;
 }
+.slider input[type="radio"] {
+  display: none;
+}
+.slider-controls {
+  position: absolute;
+  bottom: 85px;
+  left: 50%;
+  width: 200px;
+  margin-left: -100px;
+  text-align: center;
+}
+.slider-controls label {
+  display: inline-block;
+  width: 4px;
+  height: 4px;
+  margin: 0 3px;
+  vertical-align: top;
+  background: #ffffff;
+  border: 3px solid white;
+  border-radius: 50%;
+}
+.slider-items {
+  display: none;
+}
+.slider-items:nth-child(1) {
+  display: block;
+}
 .slider-text {
     float: left;
-    width: 380px;    
+    width: 380px;
+    padding-top: 75px;
 }
 .slider-text h3 {     
+    margin: 0;
     margin-bottom: 15px;
     font-size: 36px;
     line-height: 36px;
@@ -72,17 +191,38 @@ body {
     font-weight: normal;
     font-family: "Roboto";
 }
+.slider-text p {
+    margin: 0;
+    margin-bottom: 30px;
+}
 .slider-btn {
     padding-left: 70px;
     padding-right: 70px;
 }
 .slider-img {
     float: right;
+    padding-top: 52px;
     width: 340px;    
+}
+#btn-1:checked ~ .slider-inner .slider-items:nth-child(1) {
+  display: block;
+}
+
+#btn-2:checked ~ .slider-inner .slider-items:nth-child(2) {
+  display: block;
+}
+
+#btn-3:checked ~ .slider-inner .slider-items:nth-child(3) {
+  display: block;
+}
+#btn-1:checked ~ .slider-controls label[for="btn-1"],
+#btn-2:checked ~ .slider-controls label[for="btn-2"],
+#btn-3:checked ~ .slider-controls label[for="btn-3"] {
+  background: #c1c1c1;
 }
 .directions {
     height: 380px;
-    margin-bottom: 80px;
+    margin-bottom: 60px;
     border-bottom: 2px solid #eeeeee;
 }
 .direction {    
@@ -124,11 +264,21 @@ direction img {
     float: left;
     width: 620px;
 }
+.about-left:nth-child(1) {
+    padding-top: 20px;
+}
 .about-right {
     float: right;
     width: 240px;
 }
+.about-right img {
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 35px;
+}
 .about-left h1 {
+    margin: 0;
+    margin-bottom: 20px;
     font-size: 36px;
     line-height: 36px;
     color: black;
@@ -136,16 +286,21 @@ direction img {
     font-family: "Roboto";
 }
 .about-right p {
+    margin: 0;
     font-size: 16px;
     line-height: 8.56px;
     color: black;
     font-weight: normal;
     font-family: "Roboto";
+    text-transform: uppercase;
+    text-align: center;
 }
 .about-left h3 {
+    margin: 0;
     text-transform: uppercase;
 }
 .about-right h3 {
+    margin: 0;
     text-transform: uppercase;
 }
 .about-block:last-child {
@@ -180,7 +335,10 @@ direction img {
     height: 416px;
     left: 0;
     right: 0;
-    background-image: url(img/map.jpg) no-repeat;    
+    background-image: url(../img/map.jpg);
+    background-repeat: no-repeat;
+    background-position: 0 center;
+    background-size: cover;
 }
 .social-icon {
     float: left;
@@ -201,13 +359,12 @@ direction img {
 /* CATALOG          CATALOG         CATALOG */
 
 .main-heading {
-    height: 245px;
-    background-color: #eeeeee;
+    height: 175px;
     margin-bottom: 80px;
+    padding-top: 70px;
+    background-color: #eeeeee;    
 }
-.h1-catalog {    
-    margin-left: auto;
-    margin-right: auto;
+.h1-catalog {
     margin-top: 0;
     margin-bottom: 0;
     font-size: 40px;
@@ -272,28 +429,27 @@ direction img {
 .sorting-dir {
     float: right;
 }
-.products-list {
-    height: 1050px;
-}
 .products {
+    float: left;
     margin-bottom: 80px;
+    margin-right: 80px;
     border-top: 30px solid #f1f1f1;
 }
-.products:nth-child(odd){    
-    float: left;
+.products:nth-child(2n) {
+    margin-right: 0;
 }
-.products:nth-child(even) {
-    float:right;
+.products-navigation ul {
+    margin: 0 0 80px 0;
+    padding: 0;
 }
 .products-navigation li {
     display: inline-block;
-    box-sizing: border-box;
-    width: 38px;
     height: 38px;
+    padding: 12px 15px;
     border: 1px solid #f1f1f1;
     background-color: #f1f1f1;
     font-size: 12px;
-    line-height: 18px;
+    line-height: 38px;
     color: black;
     text-transform: uppercase;
     font-weight: normal;
