--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
     line-height: 22px;
     color: black;
     font-weight: normal;
-    font-family: "Roboto";    
+    font-family: "Roboto", "Arial", sans-serif;    
 }
 @font-face {
   font-weight: normal;
@@ -174,12 +174,8 @@ body {
 .slider-items {
   display: none;
 }
-.slider-items:nth-child(1) {
-  display: block;
-}
 .slider-text {
     float: left;
-    width: 380px;
     padding-top: 75px;
 }
 .slider-text h3 {     
@@ -201,8 +197,7 @@ body {
 }
 .slider-img {
     float: right;
-    padding-top: 52px;
-    width: 340px;    
+    padding-top: 52px;        
 }
 #btn-1:checked ~ .slider-inner .slider-items:nth-child(1) {
   display: block;
@@ -221,8 +216,6 @@ body {
   background: #c1c1c1;
 }
 .directions {
-    height: 380px;
-    margin-bottom: 60px;
     border-bottom: 2px solid #eeeeee;
 }
 .direction {    
@@ -256,20 +249,58 @@ direction img {
 .direction-btn {    
     padding-left: 40px;
     padding-right: 40px;
+    margin-bottom: 80px;
 }
-.about-block {
-    height: 237px;
+.direction-btn:hover {
+    background-color: #d6494d;
+}
+.direction-btn:active {
+    padding-top: 10px;
+    border-top: 3px solid #9b2d30;
+    background-color: #b63538;
+}
+.btn-green {
+    background-color: #00ca74;
+}
+.btn-green:hover {
+    background-color: #01a25e;
+}
+.btn-green:active {
+    padding-top: 10px;
+    border-top: 3px solid #007b47;
+    background-color: #009053;
+}
+.btn-yellow {
+    background-color: #efc84a;
+}
+.btn-yellow:hover {
+    background-color: #d6ae2c
+}
+.btn-yellow:active {
+    padding-top: 10px;
+    border-top: 3px solid #a3841f;
+    background-color: #c09b24;
+}
+.about-block:nth-child(2) {
+    border-bottom: 2px solid #eeeeee;
 }
 .about-left {
     float: left;
     width: 620px;
 }
-.about-left:nth-child(1) {
-    padding-top: 20px;
-}
 .about-right {
     float: right;
     width: 240px;
+}
+.about-block:nth-child(1) .about-left {
+    padding-top: 75px;
+}
+.about-block:nth-child(1) .about-right {
+    padding-top: 60px;
+}
+.about-block:nth-child(2) .about-left,
+.about-block:nth-child(2) .about-right {
+    padding-top: 45px;
 }
 .about-right img {
     display: block;
@@ -287,6 +318,9 @@ direction img {
 }
 .about-right p {
     margin: 0;
+    background-image: url("../img/about-since-bg.png");
+    background-repeat: no-repeat;
+    background-position: center;
     font-size: 16px;
     line-height: 8.56px;
     color: black;
@@ -303,24 +337,36 @@ direction img {
     margin: 0;
     text-transform: uppercase;
 }
-.about-block:last-child {
-    margin-bottom: ;
-    border-bottom: 2px solid #eeeeee;
+.about-ul {
+    list-style: none;
+    margin-bottom: 70px;
 }
-.clients {    
-    box-sizing: border-box;
-    height: 167px;
+.about-ul li {
+    margin-left: -35px;
+    padding-left: 35px;
+    background: url("../img/list-style-img.png") no-repeat left center;
+}
+.clients {
     margin-bottom: 86px;
-    border-bottom: 2px solid #eeeeee;
-    padding-top: 45px;
-    vertical-align: middle;    
+    border-bottom: 2px solid #eeeeee;    
 }
 .clients-img {    
-    display: inline-block;
+    display: inline-block;        
+    vertical-align: middle;
+    margin-top: 45px;
+    margin-bottom: 35px;
+    margin-left: 12px;
+    margin-right: 108px;
+    opacity: 0.2;
 }
-.social-btn {
-    padding-left: 55px;
-    padding-right: 55px;
+.clients-img:nth-child(3) {
+    margin-right: 0;
+}
+.clients-img:hover {
+    opacity: 1.0;
+}
+.clients-img:active {
+    opacity: 1.0;
 }
 .footer-map {
     box-sizing: border-box;    
@@ -340,15 +386,54 @@ direction img {
     background-position: 0 center;
     background-size: cover;
 }
+.footer-social {
+     margin-bottom: 75px;
+}
 .social-icon {
     float: left;
-    width: 240px;
+    width: 250px;
+    margin-right: 70px;
+}
+.social-btn {
+    position: relative;
+    display: inline-block;
+    margin-right: 28px;
+    vertical-align: top;
+    width: 60px;
+    height: 60px;
+    padding-top: 19px;
+    padding-bottom: 19px;
+    box-sizing: border-box;
+    border-radius: 50px;
+    font-size: 0;
+    color: #ffffff;
+    background-color: #e1e1e1;
+    text-align: center;
+}
+.social-btn:nth-child(3) {
+    margin-right: 0;
+}
+.social-btn:hover {
+    background-color: #fb565a;
+}
+.social-btn:active {
+    padding-top: 16px;
+    border-top: 3px solid #bf575a;
+    background-color: #d6494d;
+}
+.social-btn span {
+    font-size: 23px;
+    line-height: 23px;    
 }
 .social-tagline {
-    float: right;
+    float: left;
 }
-.social-title {
+.social-tagline p {
+    margin: 0;
+}
+.social-tagline .social-title {
     width: 560px;
+    margin-bottom: 10px;
     font-size: 36px;
     line-height: 36px;
     color: black;
@@ -385,10 +470,76 @@ direction img {
 .filter-block:nth-child(3) {
     margin-bottom: 57px;
 }
+
+/* FILTER RANGE FILTER RANGE FILTER RANGE */
+.range-controls {
+    position: relative;
+    height: 41px;
+    margin-bottom: 15px;
+    padding-top: 39px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 5px;
+    background: #f1f1f1;
+}
+.range-controls .scale {
+    height: 2px;
+    background: #d7dcde;
+}
+.range-controls .bar {
+    width: 70%;
+    height: 2px;
+    background: #00ca74;
+}
+.range-controls .toggle {
+    position: absolute;
+    top: 30px;
+    left: 0px;
+    width: 4px;
+    height: 4px;
+    border: 8px solid #fff;
+    border-radius: 50%;
+    background: #ababab;
+    box-shadow: 0 2px 1px 0 #cfcfcf;
+    cursor: pointer;
+}
+.range-controls .min-toggle {
+    left: 50px;
+}
+.range-controls .max-toggle {
+    left: 110px;
+}
+.price-controls {
+    font-size: 0;
+}
+.price-controls label {
+    display: inline-block;
+    width: 50%;
+    font-size: 16px;
+}
+.max-price {
+  text-align: right;
+}
+.price-controls input {
+    width: 60px;
+    margin-left: 10px;
+    padding: 8px 10px;
+    border: none;
+    border-radius: 5px;
+    outline: none;
+    background: #f1f1f1;
+    font-family: 'Roboto', 'Arial', sans-serif;
+    font-size: 16px;
+    text-align: center;
+    color: #283136;
+}
+/* FILTER RANGE FILTER RANGE FILTER RANGE */
+
 .filter-block label {
     display: block;
 }
 .filter-h2 {
+    margin: 0;
     margin-bottom: 20px;
     font-size: 18px;
     line-height: 30px;
@@ -396,6 +547,12 @@ direction img {
     text-transform: uppercase;
     font-weight: normal;
     font-family: "Roboto";
+}
+input [type="radio"] {
+    display: none;
+}
+input [type="checkbox"] {
+    display: none;
 }
 .filter-btn {
     width: 155px;
@@ -406,7 +563,12 @@ direction img {
     float: right;
     width: 560px;
 }
+.sorting {
+    margin-bottom: 20px;
+}
 .sorting-title {
+    margin: 0;
+    padding: 0;
     font-size: 12px;
     line-height: 18px;
     color: black;
@@ -414,22 +576,48 @@ direction img {
     font-weight: normal;
     font-family: "Roboto";
 }
-.sortinf-type {
+.sorting-type {
     float: left;
 }
 .sorting-type a {
+    margin: 0;
+    padding: 0;
+    margin-left: 40px;
     border-bottom: 1px dotted #00ca74;
     font-size: 12px;
     line-height: 18px;
-    color: #b2b2b2;
+    color: #dbdbdb;
     text-transform: uppercase;
+    text-decoration: none;
     font-weight: normal;
     font-family: "Roboto";
 }
+.sorting-type a:hover {
+    color: black;
+    border-bottom: 1px solid #00ca74;
+}
+.sorting-type a:active {
+    border-bottom: 0;
+}
 .sorting-dir {
-    float: right;
+    float: left;
+}
+.sorting-dir a {
+    font-size: 0;
+    color: #c1c1c1;
+    text-align: right;
+}
+.sorting-dir a:active {
+    color: black;
+}
+.dir-a span {
+    font-size: 23px;
+}
+.sorting-dir .dir-active {
+    color: #44d899;
 }
 .products {
+    position: relative;
     float: left;
     margin-bottom: 80px;
     margin-right: 80px;
@@ -437,6 +625,56 @@ direction img {
 }
 .products:nth-child(2n) {
     margin-right: 0;
+}
+.products-info {
+    display: none;
+    position: absolute;
+    width: 200px;
+    padding-top: 35px;
+    background: white;
+}
+.products-title {
+    margin: 0;
+    margin-bottom: 20px;
+    padding: 0;
+    font-size: 18px;
+    line-height: 8,56px;
+    color: black;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: normal;
+    font-family: "Roboto", "Arial", sans-serif;
+}
+.products-info p {
+    margin: 0;
+    margin-bottom: 30px;
+    padding: 0;
+    font-size: 14px;
+    line-height: 18px;
+    color: black;
+    text-align: center;
+    font-weight: normal;
+    font-family: "Roboto", "Arial", sans-serif;
+}
+.products-btn {
+    display: block;
+    width: 140px;
+    margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-size: 18px;
+    color: white;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: normal;
+    font-family: "Roboto", "Arial", sans-serif;
+}
+.products:hover .products-info {
+    display: block;
+    top: 20px;
+    left: 20px;
 }
 .products-navigation ul {
     margin: 0 0 80px 0;
