--- a/css/style.css
+++ b/css/style.css
@@ -60,12 +60,13 @@ body {
     padding-bottom: 13px;
     background-color: #fb565a;
     border: 0;
+    border-radius: 4px;
     text-transform: uppercase;
     text-decoration: none;
     font-size: 12px;
     line-height: 18px;
     font-weight: normal;
-    font-family: "Roboto";
+    font-family: "Roboto", "Arial", sans-serif;
     color: #ffffff; 
 }
 .clearfix:after, 
@@ -185,7 +186,7 @@ body {
     line-height: 36px;
     color: black;
     font-weight: normal;
-    font-family: "Roboto";
+    font-family: "Roboto", "Arial", sans-serif;
 }
 .slider-text p {
     margin: 0;
@@ -236,7 +237,7 @@ direction img {
     line-height: 30px;
     color: black;
     font-weight: normal;
-    font-family: "Roboto";
+    font-family: "Roboto", "Arial", sans-serif;
 }
 .direction p {
     margin-bottom: 30px;
@@ -244,7 +245,7 @@ direction img {
     line-height: 22px;
     color: black;
     font-weight: normal;
-    font-family: "Roboto";
+    font-family: "Roboto", "Arial", sans-serif;
 }   
 .direction-btn {    
     padding-left: 40px;
@@ -314,7 +315,7 @@ direction img {
     line-height: 36px;
     color: black;
     font-weight: normal;
-    font-family: "Roboto";
+    font-family: "Roboto", "Arial", sans-serif;
 }
 .about-right p {
     margin: 0;
@@ -325,7 +326,7 @@ direction img {
     line-height: 8.56px;
     color: black;
     font-weight: normal;
-    font-family: "Roboto";
+    font-family: "Roboto", "Arial", sans-serif;
     text-transform: uppercase;
     text-align: center;
 }
@@ -413,7 +414,7 @@ direction img {
     padding-right: 55px;
 }
 .footer-social {
-     margin-bottom: 75px;
+     margin-bottom: 40px;
 }
 .social-icon {
     float: left;
@@ -464,7 +465,7 @@ direction img {
     line-height: 36px;
     color: black;
     font-weight: normal;
-    font-family: "Roboto";
+    font-family: "Roboto", "Arial", sans-serif;
 }
 
 /* CATALOG          CATALOG         CATALOG */
@@ -483,7 +484,7 @@ direction img {
     color: black;
     text-transform: uppercase;
     font-weight: normal;
-    font-family: "Roboto";
+    font-family: "Roboto", "Arial", sans-serif;
     text-align: center;
 }
 .products-filters {
@@ -496,8 +497,6 @@ direction img {
 .filter-block:nth-child(3) {
     margin-bottom: 57px;
 }
-
-/* FILTER RANGE FILTER RANGE FILTER RANGE */
 .range-controls {
     position: relative;
     height: 41px;
@@ -559,10 +558,29 @@ direction img {
     text-align: center;
     color: #283136;
 }
-/* FILTER RANGE FILTER RANGE FILTER RANGE */
-
-.filter-block label {
+.label-radio {
+    position: relative;
     display: block;
+    margin: 10px 0;
+    line-height: 20px;
+    padding-left: 45px;
+}
+.label-checkbox {
+    position: relative;
+    display: block;
+    margin: 10px 0;
+    line-height: 20px;
+    padding-left: 45px;    
+}
+.filter-checbox::before {
+    content: "\2610";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 28px;
+    height: 28px;
+    font-size: 28px;
+    font-family: "symbols-nerds";
 }
 .filter-h2 {
     margin: 0;
@@ -572,18 +590,27 @@ direction img {
     color: black;
     text-transform: uppercase;
     font-weight: normal;
-    font-family: "Roboto";
+    font-family: "Roboto", "Arial", sans-serif;
 }
-input [type="radio"] {
+.filter-radio {
     display: none;
 }
-input [type="checkbox"] {
+.filter-checkbox {
     display: none;
 }
 .filter-btn {
+    display: block;
     width: 155px;
     background-color: #f1f1f1;
     color: black;
+}
+.filter-btn:hover {
+    background-color: #e5e5e5;
+}
+.filter-btn:active {
+    padding-top: 11px;
+    border-top: 2px solid #b5b5b5;
+    background-color: #d5d5d5;
 }
 .catalog {
     float: right;
@@ -600,7 +627,7 @@ input [type="checkbox"] {
     color: black;
     text-transform: uppercase;
     font-weight: normal;
-    font-family: "Roboto";
+    font-family: "Roboto", "Arial", sans-serif;
 }
 .sorting-type {
     float: left;
@@ -616,7 +643,7 @@ input [type="checkbox"] {
     text-transform: uppercase;
     text-decoration: none;
     font-weight: normal;
-    font-family: "Roboto";
+    font-family: "Roboto", "Arial", sans-serif;
 }
 .sorting-type a:hover {
     color: black;
@@ -648,6 +675,7 @@ input [type="checkbox"] {
     margin-bottom: 80px;
     margin-right: 80px;
     border-top: 30px solid #f1f1f1;
+    border-radius: 4px;
 }
 .products:nth-child(2n) {
     margin-right: 0;
@@ -662,6 +690,7 @@ input [type="checkbox"] {
 .products-title {
     margin: 0;
     margin-bottom: 20px;
+    line-height: 24px;
     padding: 0;
     font-size: 18px;
     line-height: 8,56px;
@@ -670,6 +699,9 @@ input [type="checkbox"] {
     text-align: center;
     font-weight: normal;
     font-family: "Roboto", "Arial", sans-serif;
+}
+.title-2line {
+    margin-bottom: 10px;
 }
 .products-info p {
     margin: 0;
@@ -681,6 +713,9 @@ input [type="checkbox"] {
     text-align: center;
     font-weight: normal;
     font-family: "Roboto", "Arial", sans-serif;
+}
+.products-info .p-2line {
+    margin-bottom: 12px;
 }
 .products-btn {
     display: block;
@@ -705,6 +740,9 @@ input [type="checkbox"] {
     padding-top: 8px;
     border-top: 2px solid #9b2d30;
 }
+.products:hover {
+    border-color: #797979;
+}
 .products:hover .products-info {
     display: block;
     top: 20px;
@@ -727,6 +765,7 @@ input [type="checkbox"] {
     display: block;
     padding: 12px 16px;
     border: 2px solid #f1f1f1;
+    border-radius: 4px;
     background-color: #f1f1f1;
     color: black;
     text-transform: uppercase;
