--- a/css/style.css
+++ b/css/style.css
@@ -140,8 +140,11 @@ body {
     color: #a6a6a6;
     margin-right: 15px;
 }
-.baskter:hover::before {
+.basket:hover::before {
     color: #fb565a;
+}
+.basket:active::before {
+    color: #cbcbcb;
 }
 .basket-block a:hover {
     color: #fb565a;
@@ -339,10 +342,12 @@ direction img {
 }
 .about-left h3 {
     margin: 0;
+    margin-bottom: 30px;
     text-transform: uppercase;
 }
 .about-right h3 {
     margin: 0;
+    margin-bottom: 30px;
     text-transform: uppercase;
 }
 .about-ul {
@@ -352,6 +357,7 @@ direction img {
 .about-ul li {
     margin-left: -35px;
     padding-left: 35px;
+    margin-bottom: 30px;
     background: url("../img/list-style-img.png") no-repeat left center;
 }
 .clients {
@@ -474,7 +480,115 @@ direction img {
     font-weight: normal;
     font-family: "Roboto", "Arial", sans-serif;
 }
-
+.modal-content {
+    display: none;
+    position: absolute;
+    width: 630px;
+    top: 1590px;
+    left: 50%;
+    margin-left: -315px;
+    background-color: #ffffff;
+    box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
+    z-index: 5;
+}
+.modal-content-close {
+    position: absolute;
+    top: 6px;
+    right: 6px;
+    width: 40px;
+    height: 40px;
+    border: 0;    
+    border-radius: 50%;
+    font-size: 0;
+    background-color: #fb565a;  
+    outline: 0;
+    cursor: pointer;
+}
+.modal-content-close::before,
+.modal-content-close::after {
+    content: "";
+    position: absolute;
+    top: 18px;
+    left: 7px;
+    width: 26px;
+    height: 4px;
+    background-color: #ffffff;
+    border-radius: 1px;
+}
+.modal-content-close::before {
+    transform: rotate(45deg);
+}
+.modal-content-close::after {
+    transform: rotate(-45deg);
+}
+.user-contacts-block {
+    padding-top: 55px;
+    margin-bottom: 22px;
+}
+.user-name-block {
+    float: left;
+    width: 310px;
+    box-sizing: border-box;    
+    padding-left: 80px;
+}
+.user-email-block {
+    float: left;
+    width: 320px;    
+    box-sizing: border-box;
+    padding-left: 10px;
+}
+.user-name-block p,
+.user-email-block p {
+    margin: 0;
+    padding: 0;
+    padding-bottom: 12px;
+}
+.user-letter-block {
+    padding-left: 80px; 
+}
+.letter {
+    resize:none;
+}
+.name,
+.email {
+    width: 220px;
+    box-sizing: border-box;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 13px;    
+    border: 2px solid #d7dcde;
+}
+.letter {
+    width: 460px;
+    height: 112px;
+    margin-bottom: 50px;
+    box-sizing: border-box;
+    padding-top: 10px;
+    padding-left: 13px;
+}
+.name,
+.email,
+.letter {
+    font-size: 12px;
+    line-height: 18px;
+    font-family: "Roboto", "Arial", sans-serif;
+    color: black;
+    text-transform: uppercase;
+}
+.name:hover,
+.email:hover,
+.letter:hover {
+    border-color: #a2a9ac;
+}
+.name:focus,
+.email:focus,
+.letter:focus {
+    border-color: #56bffb;
+}
+.user-letter-block .btn {
+    width: 460px;
+    margin-bottom: 50px;
+}
 /* CATALOG          CATALOG         CATALOG */
 
 .main-heading {
@@ -568,26 +682,46 @@ direction img {
 .label-radio {
     position: relative;
     display: block;
-    margin: 10px 0;
+    margin: 25px 0;
+    padding-left: 35px;
     line-height: 20px;
-    padding-left: 45px;
+    cursor: pointer;
+}
+.filter-radio + span::before {
+    position: absolute;
+    left: 0px;
+    content: "\25cb";
+    color: #c1c1c1;
+    font-size: 28px;
+    font-family: "symbols-nerds";
+}
+.filter-radio:checked + span::before {
+    content: "\25cf";
+}
+.filter-radio + span:hover::before {
+    color: #b5b5b5;
 }
 .label-checkbox {
     position: relative;
     display: block;
-    margin: 10px 0;
+    margin: 25px 0;
+    padding-left: 35px;
     line-height: 20px;
-    padding-left: 45px;    
+    cursor: pointer;
 }
-.filter-checbox::before {
-    content: "\2610";
+.filter-checkbox + span::before {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 28px;
-    height: 28px;
+    left: 0px;
+    content: "\2610";
+    color: #c1c1c1;
     font-size: 28px;
     font-family: "symbols-nerds";
+}
+.filter-checkbox:checked + span::before {
+    content: "\2611";
+}
+.filter-checkbox + span:hover::before {
+    color: #b5b5b5;
 }
 .filter-h2 {
     margin: 0;
@@ -681,14 +815,8 @@ direction img {
 .dir-desk {
     transform: rotate(180deg);
 }
-.sorting-dir a:active {
-    color: black;
-}
-.dir-a span {
-    font-size: 23px;
-}
-.sorting-dir .dir-active {
-    color: #44d899;
+.dir-a:active {
+    border-bottom-color: black;
 }
 .products {
     position: relative;
@@ -700,6 +828,18 @@ direction img {
 }
 .products:nth-child(2n) {
     margin-right: 0;
+}
+.products:before {
+    position: absolute;
+    display: block;
+    content: "";
+    width: 50px;
+    height: 10px;
+    background-image: url("../img/border-img.png");
+    background-repeat: no-repeat;
+    top: -20px;
+    left: 11px;
+    z-index: 1;
 }
 .products-info {
     display: none;
